--- a/5.1.5.Kingroon_KP3s.md
+++ b/5.1.5.Kingroon_KP3s.md
@@ -1,1 +1,81 @@
-## Imipresora: Kinroon KP3s
+## Impresora: Kingroon KP3s
+
+
+
+## Configuración de Slicers
+
+### Configuración de Ultimaker Cura
+
+[![Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/svuQmR8ayqE/0.jpg)](https://youtu.be/svuQmR8ayqE)
+
+[Vídeo: Configuración de Ultimaker  Cura  para la impresora 3D Kingroon KP3s](https://youtu.be/svuQmR8ayqE)
+
+### Configuración de Prusa Slicer
+
+[![Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://img.youtube.com/vi/_o9P8IFTHUI/0.jpg)](https://youtu.be/_o9P8IFTHUI)
+
+[Vídeo: Configuración de PrusaSlicer para Impresora 3D Kingroon KP3s](https://youtu.be/_o9P8IFTHUI)
+
+
+## Menú de uso
+
+[![Vídeo: Menú de la impresora 3D Kingroon KP3S](https://img.youtube.com/vi/0mlIJfO5uq0/0.jpg)](https://youtu.be/0mlIJfO5uq0)
+
+[Vídeo: Menú de la impresora 3D Kingroon KP3S](https://youtu.be/0mlIJfO5uq0)
+
+### Despegando una pieza
+
+La impresora dispone de una superficie magnética que mejora la adherencia al mismo tiempo que nos facilita el separar las piezas
+
+[![Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://img.youtube.com/vi/qTbd1WMmKlg/0.jpg)](https://youtu.be/qTbd1WMmKlg)
+
+[Vídeo: Despegando una pieza impresa en Kingroon KP3s](https://youtu.be/qTbd1WMmKlg)
+
+
+
+
+## Mejoras
+
+
+# Pruebas de la impresora KingRoom KP3S
+
+[Tienda KingRoom](https://es.aliexpress.com/store/1905393)
+
+[KingRoom KP3S](https://es.aliexpress.com/item/4001279175159.html?spm=a2g0o.store_home.singleImageText_6000324340063.0)
+
+![](https://ae01.alicdn.com/kf/H08ccf98c87c349fb82fade2516dae9c7Z/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
+
+![](https://ae01.alicdn.com/kf/H06705d905ff547d89f1bec9d4a07b8d9A/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
+
+
+Tamaño de construcción: 180*180*180mm
+Resolución de impresión: 0,05-0,3mm
+Tamaño de la máquina: 280*285*370mm
+Fuente de alimentación: 24V15A360W
+
+## Mejoras
+
+[Soporte fuente](https://www.thingiverse.com/thing:4740318)
+
+![](https://cdn.thingiverse.com/assets/ba/b2/58/2c/7d/featured_preview_photo_2021-01-28_02-53-48.jpg)
+
+[Soporte fuente de alimentación vertical](https://www.thingiverse.com/thing:4671163)
+
+![](https://cdn.thingiverse.com/assets/ab/22/14/3d/0a/featured_preview_IMG_1407-min.jpg)
+
+[Portarollo sobre la fuente de alimentación](https://www.thingiverse.com/thing:4611818)
+
+![](https://cdn.thingiverse.com/assets/10/e7/e0/44/15/featured_preview_Screenshot_20201001-113713.jpg)
+
+[Portarollo sobre el eje Z](https://www.thingiverse.com/thing:4600120)
+
+![](https://cdn.thingiverse.com/assets/19/d0/1c/99/cc/featured_preview_Screenshot_20200919-171553__01.jpg)
+
+[Portarollos sobre el eje Z](https://www.thingiverse.com/thing:4783450)
+
+![](https://cdn.thingiverse.com/assets/9b/c8/0b/81/17/featured_preview_Kingroon_KP3S_soporte_rolo_en_Z.jpg)
+
+
+## Referencias
+
+[Review detallada](https://3dprintbeginner.com/kingroon-kp3s-review/)
