--- a/5.1.5.Kingroon_KP3s.md
+++ b/5.1.5.Kingroon_KP3s.md
@@ -1,5 +1,68 @@
 ## Impresora: Kingroon KP3s
 
+[Tienda KingRoom](https://es.aliexpress.com/store/1905393)
+
+[KingRoom KP3S](https://es.aliexpress.com/item/4001279175159.html?spm=a2g0o.store_home.singleImageText_6000324340063.0)
+
+Es una impresora ideal cuando tienes pocos espacio y la superficie de impresión es de 180 x 180mm. El único pero es que el ventilador del extrusor es muy ruidoso
+
+![Ocupa poco espacio](./images/PocoEspacio.jpg)
+
+Me gusta mucho la calidad de la impresora KingRoon KP3s  porque viene perfectamente cableada, los cables están muy bien protegidos y además incluye una cinta que nos permiten hacer que el tubito para el filamento se adapte perfectamente a la posición de nuestro rollo de filamento.
+
+El diseño es bastante elegante y robusto
+
+![Finales de carrera](./images/FinalesCarrera.jpg)
+
+Tiene una estructura muy sólida basada en T-slot e incluye guías lineales
+
+![Guía Lineal eje Y](./images/GuiaLineaY.jpg)
+![Guía Lineal eje Y](./images/GuiaLinealX.jpg)
+
+También incluye repuestos, unos metros de filamento y todas las herramientas necesarias para el montaje y uso.
+
+![](./images/repuestos.jpg)
+![](./images/Herramientas.jpg)
+
+![](https://ae01.alicdn.com/kf/H08ccf98c87c349fb82fade2516dae9c7Z/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
+
+![](https://ae01.alicdn.com/kf/H06705d905ff547d89f1bec9d4a07b8d9A/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
+
+
+![Contenido de la caja](./images/Contenido.jpg)
+
+Zona de impresión : 180 x 180 x 180mm
+Resolución de impresión: 0,05 - 0,3mm
+Tamaño de la máquina: 280 x 285 x 370mm
+Fuente de alimentación: 24V 15A 360W
+
+Tiene un extrusor directo que viene completamente montado
+
+![Extrusor](./images/Extrusor.jpg)
+
+## Calibración
+
+Sólo necesitamos calibrar el eje Z y que la base esté nivelada en todas las esquinas.
+
+1. Ajustamos que la boquillas se quede muy cerca de la base (que podamos deslizar una hoja de papel entre ambas)
+
+En la imagen se puede ver una distancias excesiva
+
+![Distancia excesiva EjeZ](./images/DistanciaEjeZ.png)
+
+Para reducirla ajustamos con el tornillo del eje Z   que ajusta el punto en el que el motor Z se para al tocar el final del carrera del eje Z
+
+![Nivelación eje Z](./images/BotonT.png)
+
+Vamos haciendo Home del eje Z desde la opción "Homming" del menú, hasta que la boquilla está muy cerca de la base.
+
+![Menú KP3s](./images/Menu_kp3s.png)
+
+2. Una vez lo hemos acercado vamos a comprobar el nivelado de la base, para ello entramos en menú "Leveling", donde iremos comprobando el ajuste de la altura de la boquilla en cada uno de los 5 puntos, ajustándolo con las ruedas de cada esquina.
+
+[![Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s ](https://img.youtube.com/vi/W9fHBA8sDYU/0.jpg)](https://youtu.be/W9fHBA8sDYU)
+
+[Vídeo: Calibrado del eje Z de la impresora Kingroon  KP3s](https://youtu.be/W9fHBA8sDYU)
 
 
 ## Configuración de Slicers
@@ -34,26 +97,14 @@ La impresora dispone de una superficie magnética que mejora la adherencia al mi
 
 
 
-## Mejoras
-
-
-# Pruebas de la impresora KingRoom KP3S
-
-[Tienda KingRoom](https://es.aliexpress.com/store/1905393)
-
-[KingRoom KP3S](https://es.aliexpress.com/item/4001279175159.html?spm=a2g0o.store_home.singleImageText_6000324340063.0)
-
-![](https://ae01.alicdn.com/kf/H08ccf98c87c349fb82fade2516dae9c7Z/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_640x640.jpg)
-
-![](https://ae01.alicdn.com/kf/H06705d905ff547d89f1bec9d4a07b8d9A/KINGROON-impresora-3D-de-alta-precisi-n-KP3S-Kit-de-impresi-n-3d-pantalla-t-ctil.jpg_Q90.jpg_.webp)
-
-
-Tamaño de construcción: 180*180*180mm
-Resolución de impresión: 0,05-0,3mm
-Tamaño de la máquina: 280*285*370mm
-Fuente de alimentación: 24V15A360W
 
 ## Mejoras
+
+[![Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://img.youtube.com/vi/4o_p7YZYxN8/0.jpg)](https://youtu.be/4o_p7YZYxN8)
+
+
+[Vídeo: Mejoras a la impresora 3D Kingroon KP3s](https://youtu.be/4o_p7YZYxN8)
+
 
 [Soporte fuente](https://www.thingiverse.com/thing:4740318)
 
