--- a/5.2.Montaje.Kingroon_KP3s.md
+++ b/5.2.Montaje.Kingroon_KP3s.md
@@ -1,9 +1,25 @@
 ## Montaje KingRoon KP3s
 
 
-![Montaje ](./images/KP3s_montaje5.jpg)
-![Montaje ](./images/KP3s_montaje4.jpg)
-![Montaje ](./images/KP3s_montaje3.jpg)
-![Montaje ](./images/KP3s_montaje2.jpg)
+El montaje de la impresora quien room kp13 es muy sencillo:
+
+![Montaje 1](./images/KP3s_montaje0.jpg)
+
+El cableado viene completamente hecho, además de excelentemente protegido
+
+![Cableado](./images/cableado.jpg)
+
+
+Lo único que tenemos que hacer es conectar el eje z colocarlo en el hueco que viene dispuesto para ello.
+
 ![Montaje ](./images/KP3s_montaje1.jpg)
-![Montaje ](./images/KP3s_montaje0.jpg)
+
+Fijarlo con unos tornillos por la parte de abajo 
+
+![Montaje ](./images/KP3s_montaje2.jpg)
+![Montaje ](./images/KP3s_montaje3.jpg)
+![Montaje ](./images/KP3s_montaje4.jpg)
+![Montaje ](./images/KP3s_montaje5.jpg)
+
+
+y una vez que lo hemos terminado de colocar calibrar la impresora se puede realizar todo el trabajo en menos de 10 minutos
