--- a/5.2.Montaje.Kingroon_KP3s.md
+++ b/5.2.Montaje.Kingroon_KP3s.md
@@ -12,14 +12,26 @@ El cableado viene completamente hecho, además de excelentemente protegido
 
 Lo único que tenemos que hacer es conectar el eje z colocarlo en el hueco que viene dispuesto para ello.
 
+![Montaje 1](./images/KP3s_montaje0_2.jpg)
+
 ![Montaje ](./images/KP3s_montaje1.jpg)
 
 Fijarlo con unos tornillos por la parte de abajo 
 
 ![Montaje ](./images/KP3s_montaje2.jpg)
+
+Colocamos el adaptar del motor y el husillo, atornillando la parte más estrecha del lado del motor
+
 ![Montaje ](./images/KP3s_montaje3.jpg)
+
+Colocamos el usillo pasándolo por la rosca brazo X
+
+
 ![Montaje ](./images/KP3s_montaje4.jpg)
+
+Y atornillamos el adaptador
+
 ![Montaje ](./images/KP3s_montaje5.jpg)
 
 
-y una vez que lo hemos terminado de colocar calibrar la impresora se puede realizar todo el trabajo en menos de 10 minutos
+Y una vez que lo hemos terminado de colocar calibrar la impresora se puede realizar todo el trabajo en menos de 10 minutos
