--- a/0.4.ComprarImpresora3d.md
+++ b/0.4.ComprarImpresora3d.md
@@ -1,5 +1,12 @@
 # Comprar una impresora
 
+Vamos a ver algunos detalles
+
+* **Impresora barata**: alrededor de los 200 - 300 €. Vienen casi montadas, en  kits bastante sencillos de montar. Tienen una durabilidad bastante correcta. Además algo muy importante es que tienen una gran comunidad detrás que nos permite mejorarla, entenderla y arreglar si tenemos algún problema.
+
+
+* **Gama alta**: vamos a encontrar impresoras cerradas, por ejemplo de marca Ultimaker o de  makerbot sí sí que tienen unos precios del orden de los 2000 y pico euros pero una enorme calidad y una gran estabilidad además estamos comprando un producto que tiene un gran soporte y una excelente calidad
+
 [![Vídeo: 0.5 ¿Qué impresora comprar?](https://img.youtube.com/vi/AFRegfBQCF0/0.jpg)](https://youtu.be/AFRegfBQCF0)
 
 
@@ -46,13 +53,35 @@ Esta no la he probado (todavía) pero el compañero Juan Pablo Moraga nos la rec
 
 Se puede conseguir por unos 140€
 
+## [Prusa Original i3 MK3S](https://www.prusa3d.es/original-prusa-i3-mk3-spa/) 769€ el kit
+
+![](https://cdn.shop.prusa3d.com/1303-large_default/original-prusa-i3-mk3s-kit.jpg)
+
+
+### Complemento multimaterial
+
+[Multimaterial MMU2S](https://www.prusa3d.es/original-prusa-i3-multi-material-2-0/)
+
+![](https://cdn.prusa3d.com/wp-content/uploads/2018/08/MMU-404.00_00_50_07.png)
+
+Soporta hasta 5 filamentos
+
+![5 filamentos](https://cdn.prusa3d.com/wp-content/uploads/2018/08/5filaments.jpg)
+
+![](https://cdn.prusa3d.com/wp-content/uploads/2018/08/P1144180.jpg)
+
+## Calidad industrial - [Ultimaker](https://ultimaker.com/es/3d-printers) - 2500€
+
+![](https://images.ctfassets.net/7cnpidfipnrw/2Mdkporf7LzCuteONOl4lX/007befef1c94b2216866967cf68fa8d8/Ultimaker-S5-3D-printer-overview-highlight.png?f=center&fm=webp&w=520)
+
 ## ¿Dónde comprarlas?
 
 # Recomendados
 
-[Createc3D](https://createc3d.com/shop/es/19-kit-impresoras-3d) Recomendado para quien requiera soporte presencial
+[En Granada - Createc3D](https://createc3d.com/shop/es/19-kit-impresoras-3d) Recomendado para quien requiera soporte presencial
 
-[Bq](https://store.bq.com/es/mundo-3d/impresion-3-d/) Variedad de formatos
+[Online - micro-log.com](https://micro-log.com)
+
 
 ## Cual elegir
 
