--- a/5.1.3.Prusa_i3.md
+++ b/5.1.3.Prusa_i3.md
@@ -16,13 +16,13 @@ La calibración es el proceso por el conseguimos que la boquilla del extrusor es
 Para comprobarlo hacemos lo siguiente:
 
 * Llevamos la impresora a su zona de reposo (Home) desde el menú Preparar-> Llevar al origen (Autohome). 
-* El extrusor ser irá a la esquina delantera izquierda de la base.
-* Comprobamos que la boquilla está pegada a la base pero sin presionarla. Se suele decir que debe caber un papel en medio de las dos si holgura, pero que tampoco esté muy suelto.
+* El extrusor se irá a la esquina delantera izquierda de la base.
+* Comprobamos que la boquilla está pegada a la base pero sin presionarla. Se suele decir que debe caber un papel en medio de las dos sin holgura, pero que tampoco esté muy suelto.
 
 ![Nivelando Eje Z](./images/NivelandoZ_1.png)
 
 * Ahora liberamos los motores con la opción Preparar -> Apagar Motores y movemos el extrusor y la base para comprobar que la nivelación es igual en las 4 esquinas.
-* Si vemos que necesitamos mover toda la base ajustaremos el tornillo que tenemos a la izquiera y que presiona el final de interruptor (final de carrera). Girando el tornillo en sentido horario bajamos la boquilla
+* Si vemos que necesitamos mover toda la base ajustaremos el tornillo que tenemos a la izquierda y que presiona el final de interruptor (final de carrera). Girando el tornillo en sentido horario bajamos la boquilla
 
 ![Tornillo calibración](./images/Calibracion.png)
 
@@ -32,7 +32,7 @@ Para comprobarlo hacemos lo siguiente:
 
 [Vídeo: Calibración eje Z de una impresora Prusa i3](https://youtu.be/CARIvKaBPZI)
 
-* Sí vemos que algunas de las esquinas ajustan mejor que otras podemos ajustarlas individualmente.
+* Si vemos que algunas de las esquinas ajustan mejor que otras, podemos ajustarlas individualmente.
 * Un caso especial es cuando vemos que es el eje X, donde está el extrusor el que está inclinado. Esto ocurre por el uso o por un golpe o por diferencias entre los motores del eje Z. En este caso, con la impresora apagada, podemos hacer girar los motores del eje z manualmente.
 
 [![Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://img.youtube.com/vi/WTcrb49kiZE/0.jpg)](https://youtu.be/WTcrb49kiZE)
@@ -45,13 +45,14 @@ Para comprobarlo hacemos lo siguiente:
 Vamos a ver las opciones del menú más normales de las impresoras del tipo Prusa i3 (basadas en el firmware más usual Marlin)
 
 Tenemos los siguientes menús:
+
 * Preparar: donde están las opciones para usar antes de imprimir
     * Precalentar
     * Movimientos
     * Ir al origen o AutoHome
     * Apagar motores
 * Control: configuración de la impresora
-* Menu SD, para seleccionar lo que queremos imprimir
+* Menú SD: para seleccionar lo que queremos imprimir
 
 [![Vídeo: Menú de las impresoras Prusa i3 (marlin)](https://img.youtube.com/vi/0hkw0U7VBW0/0.jpg)](https://youtu.be/0hkw0U7VBW0)
 
@@ -60,7 +61,7 @@ Tenemos los siguientes menús:
 
 ## Configuración de Ultimaker Cura para Prusa i3
 
-1. En el ménu Ajustes -> Impresoras seleccionamos Agregar Impresora
+1. En el menú Ajustes -> Impresoras seleccionamos Agregar Impresora
 1. Seleccionamos "Agregar impresora fuera de red"
 1. Seleccionamos Custom 
 1. Seleccionamos Custom FFF
@@ -83,12 +84,14 @@ Ya tenemos todo listo para imprimir, sólo tenemos que:
 * Cargamos/importamos el modelo (fichero STL) que queremos imprimir
 * Ajustamos tamaño/orientación
 * Configuramos la impresión con nuestro laminador según necesitemos:
-        * Modelo de impresora correcto
-        * Tipo de filamento 
-        * Soporte 
-        * Adherencia a la base
-        * % de relleno
-        * Altura de capa.
+
+    * Modelo de impresora correcto
+    * Tipo de filamento 
+    * Soporte 
+    * Adherencia a la base
+    * % de relleno
+    * Altura de capa.
+
 * Laminamos
 * Exportamos el fichero gcode a la tarjeta SD
 * Ponemos la tarjeta SD en la impresora
@@ -114,11 +117,11 @@ Si todo va bien, la pieza se irá formando
 ## Cambio de filamento
 
 1. Calentamos el extrusor hasta la temperatura correcta del filamento actual
-1. Soltamos los tornillos del extrusor que hacen presión en el filmaneto (idler)
-1. Empujamos un poco el filamento para que estruya un poco de plástico (y evitar que queden fragmentos) y lo sacamos con decisión.
-1. Calentamos el exturor hasta la temperatura del nuevo filamento
+1. Soltamos los tornillos del extrusor que hacen presión en el filamento (idler)
+1. Empujamos un poco el filamento para que extruya un poco de plástico (y evitar que queden fragmentos) y lo sacamos con decisión.
+1. Calentamos el extrusor hasta la temperatura del nuevo filamento
 1. Cortamos el filamento en bisel para que entre más fácilmente
-1. Introducirmos el filamento manualmente hasta que vuelva a salir plástico.
+1. Introducimos el filamento manualmente hasta que vuelva a salir plástico.
 1. Volvemos a poner los tornillos y ajustamos la presión.
 1. Movemos la rueda del extrusor para ver que el filamento fluye.
 
@@ -152,11 +155,11 @@ Si hacemos un transporte en el que lleva bastante tiempo en coche hola estamos m
 
 ## Símbolo raros en la pantalla 
 
-Enn las versiones más antiguas ocurría que la pantalla de la impresora pierde los caracteres y se llena de símbolos extraños. Lo que tenemos que hacer es pulsamos el botoncito y se repinta.
+En las versiones más antiguas ocurría que la pantalla de la impresora pierde los caracteres y se llena de símbolos extraños. Lo que tenemos que hacer es pulsar el botoncito y se repinta.
 
 ### Adherencia a la placa
 
-Podemos añadir laca al cristal de la impresora para mejorar la adherencia, no es necesario encharcarlo, basta con una cafa fina.
+Podemos añadir laca al cristal de la impresora para mejorar la adherencia, no es necesario encharcarlo, basta con una capa fina.
 
 A medida que la vayamos usando esa capa habrá que limpiarla pues puede llegar a ensuciar la base de las piezas, sobre todo si son oscuras.
 
