--- a/6.4.Mantenimiento.md
+++ b/6.4.Mantenimiento.md
@@ -1,5 +1,8 @@
 # Mantenimiento básico de una impresora 3D
 
+
+## Decálogo del mantenimiento
+
 ![Licencia CC by SA](./images/CCbySQ_88x31.png) by José Andrés de @cantabRobots
 
 
