--- a/5.1.3.Prusa_i3.md
+++ b/5.1.3.Prusa_i3.md
@@ -16,13 +16,13 @@ La calibración es el proceso por el conseguimos que la boquilla del extrusor es
 Para comprobarlo hacemos lo siguiente:
 
 * Llevamos la impresora a su zona de reposo (Home) desde el menú Preparar-> Llevar al origen (Autohome). 
-* El extrusor ser irá a la esquina delantera izquierda de la base.
-* Comprobamos que la boquilla está pegada a la base pero sin presionarla. Se suele decir que debe caber un papel en medio de las dos si holgura, pero que tampoco esté muy suelto.
+* El extrusor se irá a la esquina delantera izquierda de la base.
+* Comprobamos que la boquilla está pegada a la base pero sin presionarla. Se suele decir que debe caber un papel en medio de las dos sin holgura, pero que tampoco esté muy suelto.
 
 ![Nivelando Eje Z](./images/NivelandoZ_1.png)
 
 * Ahora liberamos los motores con la opción Preparar -> Apagar Motores y movemos el extrusor y la base para comprobar que la nivelación es igual en las 4 esquinas.
-* Si vemos que necesitamos mover toda la base ajustaremos el tornillo que tenemos a la izquiera y que presiona el final de interruptor (final de carrera). Girando el tornillo en sentido horario bajamos la boquilla
+* Si vemos que necesitamos mover toda la base ajustaremos el tornillo que tenemos a la izquierda y que presiona el final de interruptor (final de carrera). Girando el tornillo en sentido horario bajamos la boquilla
 
 ![Tornillo calibración](./images/Calibracion.png)
 
@@ -32,7 +32,7 @@ Para comprobarlo hacemos lo siguiente:
 
 [Vídeo: Calibración eje Z de una impresora Prusa i3](https://youtu.be/CARIvKaBPZI)
 
-* Sí vemos que algunas de las esquinas ajustan mejor que otras podemos ajustarlas individualmente.
+* Si vemos que algunas de las esquinas ajustan mejor que otras, podemos ajustarlas individualmente.
 * Un caso especial es cuando vemos que es el eje X, donde está el extrusor el que está inclinado. Esto ocurre por el uso o por un golpe o por diferencias entre los motores del eje Z. En este caso, con la impresora apagada, podemos hacer girar los motores del eje z manualmente.
 
 [![Vídeo: Ajuste de la nivelación del Eje X de una impresora 3D](https://img.youtube.com/vi/WTcrb49kiZE/0.jpg)](https://youtu.be/WTcrb49kiZE)
@@ -83,12 +83,14 @@ Ya tenemos todo listo para imprimir, sólo tenemos que:
 * Cargamos/importamos el modelo (fichero STL) que queremos imprimir
 * Ajustamos tamaño/orientación
 * Configuramos la impresión con nuestro laminador según necesitemos:
-        * Modelo de impresora correcto
-        * Tipo de filamento 
-        * Soporte 
-        * Adherencia a la base
-        * % de relleno
-        * Altura de capa.
+
+    * Modelo de impresora correcto
+    * Tipo de filamento 
+    * Soporte 
+    * Adherencia a la base
+    * % de relleno
+    * Altura de capa.
+    
 * Laminamos
 * Exportamos el fichero gcode a la tarjeta SD
 * Ponemos la tarjeta SD en la impresora
