--- a/3.1.Cura_v2.md
+++ b/3.1.Cura_v2.md
@@ -1,1 +1,5 @@
-https://of3lia.com/ultimaker-cura/
+[Megatutorial Cura](https://of3lia.com/ultimaker-cura/)
+
+[Tutorial sobre Cura de los expertos de bitfab.io](https://bitfab.io/es/blog/tutorial-laminado-cura/)
+
+[Mega tutorial](https://formizable.com/mega-tutorial-de-cura-profundizando-en-cura-3d-slicer/)
