--- a/3.2.PrusaSlicer_v2.md
+++ b/3.2.PrusaSlicer_v2.md
@@ -1,1 +1,4 @@
-https://help.prusa3d.com/es/article/informacion-general_1910
+
+Excelente [documentción de Prusa Slicer](https://help.prusa3d.com/es/article/informacion-general_1910) ¡y en Español!
+
+[Tutorial de los expertos de bitfab.io](https://bitfab.io/es/blog/prusa-slicer/)
