--- a/3.0.Slicers.md
+++ b/3.0.Slicers.md
@@ -42,7 +42,7 @@ Veremos el resultado impreso y lo compararemos con el que nos mostraba Cura en l
 [Vídeo: 3.1.3 Usamos Cura con una pieza más compleja que necesita de soporte y de adherencia](https://youtu.be/XUQR765Wtf0)
 
 
-
+[Tutorial sobre Cura de los expertos de bitfab.io](https://bitfab.io/es/blog/tutorial-laminado-cura/)
 
 [Mega tutorial](https://formizable.com/mega-tutorial-de-cura-profundizando-en-cura-3d-slicer/)
 
@@ -53,7 +53,7 @@ Veremos el resultado impreso y lo compararemos con el que nos mostraba Cura en l
 
 [Documentación](http://imprimalia3d.com/recursosimpresion3d/gu-configuraci-n-par-metros-slic3r)
 
-[Tutorial](https://bitfab.io/es/blog/prusa-slicer/)
+[Tutorial de los expertos de bitfab.io](https://bitfab.io/es/blog/prusa-slicer/)
 
 
 [Problemas con las dimensiones](https://manual.slic3r.org/troubleshooting/dimension-errors)
