--- a/0.0.0.indice.md
+++ b/0.0.0.indice.md
@@ -8,14 +8,14 @@ http://bit.ly/3DPrimaria
 
 ## 0. [Introducción a la impresión 3D](./0.0.Introduccion3D.md)
 
-## 1. Uso [Vídeo 1]()
+## 1. Uso 
 * [Proceso de impresión](./1.0.ProcesoImpresion3D.md)
 * [Guía Rápida](./0.5.GuiaRapida.md)
     * Preparación impresora
     * Preparación del modelo
     * Impresión
 
-## 2. Modelos 3D [Vídeo 2]()
+## 2. Modelos 3D 
 * ¿Dónde encontrarlos? [Repositorios de diseños](./2.0.Repositorios.md)
 
 ## 3. Programas para imprimir
