--- a/0.1.Historia.md
+++ b/0.1.Historia.md
@@ -45,3 +45,22 @@ El mundo de la impresión 3D nos da un gran ejemplo de lo que podemos conseguir 
 
 
 [Referencia]( https://en.m.wikipedia.org/wiki/3D_printing)
+
+### Evolución de los modelos
+
+
+
+* [RepRap](https://en.wikipedia.org/wiki/RepRap_project): Haciendo prototipos rápidamente
+
+![reprap](https://upload.wikimedia.org/wikipedia/commons/a/a7/First_replication.jpg)
+
+* i1
+
+![i1](https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Reprap_Darwin.jpg/330px-Reprap_Darwin.jpg)
+
+* i2
+![reprap](http://reprap.org/mediawiki/images/thumb/1/1f/Mendel.jpg/800px-Mendel.jpg)
+
+* i3
+
+![i3](http://www.filament2print.com/wp-content/uploads/2014/10/Prusa-i3-hphestos-1.jpg)
