--- a/1.0.ProcesoImpresion3D.md
+++ b/1.0.ProcesoImpresion3D.md
@@ -1,4 +1,11 @@
 # Proceso de impresión 3D
+
+Proceso de impresión
+Preparación impresora
+Preparación del modelo
+Impresión
+
+
 ![](./images/3D-printing-process-chain.png)
 
 ![](./images/20-best-3d-printing-software-tools-all-are-free.png)
@@ -23,3 +30,4 @@ El proceso básico de impresión tiene los siguientes paso:
     1. Si queremos que se creen estructura de **soporte**
     1. Si necesitamos estructuras para mejorar la **adherencia**
     ![](https://static.wixstatic.com/media/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.png/v1/fill/w_593,h_404,al_c,q_80,usm_0.66_1.00_0.01/d5bf0f_5e9bd4d87bd04f32997ab4143e7bee63~mv2.webp)
+    
