--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -1,5 +1,11 @@
 ## [Filamentos](http://comohacer.eu/comparativa-impresoras-3d/#Que_materiales_usan)
 
+
+Tipos
+Usos
+Calidades y precios
+
+
 [![Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://img.youtube.com/vi/74VFdfpiIuI/0.jpg)](https://youtu.be/74VFdfpiIuI)
 
 [Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://youtu.be/74VFdfpiIuI)
