--- a/6.4.Mantenimiento.md
+++ b/6.4.Mantenimiento.md
@@ -1,5 +1,10 @@
 # Mantenimiento básico de una impresora 3D
 
+Limpieza
+Engrasado
+Ajustes
+Tensión de las correas
+
 
 ## Decálogo del mantenimiento
 
