--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -37,8 +37,18 @@ Otros extrusores utilizan un sistema de engranaje que multiplican la fuerza del 
 
 ## Impresoras que no utilizan filamento
 
-Existen alguna extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como papeles que son como pequeños bolitas de plástico con el que se pueden trabajar el funcionamiento de esta impresora es más complejo y lo que suelen incluir en el extrusor es una especie de depósito o tolva que van extrayendo la cantidad de cuada de este plástico al mismo tiempo que lo van rompiendo comprimiéndolo y fundiendo
+Existen alguna extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pelets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
 
+Estos extrusores son algo más complejos ya que suelen incluir una especie de depósito o tolva que van extrayendo la cantidad adecuada de este plástico al mismo tiempo que lo van rompiendo, comprimiendo y fundiendo.
+
+![](./images/extrusorPelets.jpg)
+
+![](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
+
+
+Para ello utilizan una broca especial conectada al motor del extrusor que va moviento el plástico a la velocidad adecuada
+
+![](./images/broca.jpg)
 
 
 ## Estructura del extrusor
