--- a/2.1.Filamentos.md
+++ b/2.1.Filamentos.md
@@ -5,6 +5,76 @@ Tipos
 Usos
 Calidades y precios
 
+### Proceso de fabricación
+
+
+No nos cabe ninguna duda de que el filamento es parte esencial del resultado de toda  impresión:  la mejor impresora con un filamento de mala calidad no va a conseguir un resultado satisfactorio.
+
+
+Veamos cómo se fabrican los filamentos:
+
+Primero se prepara una mezcla con los distintos materiales que formarán el filamento
+
+* Se parte del plástico original que será la base (PLA, ABS, PETG,...) en forma de pellets
+* Se le añaden diferentes aditivos, en una proporción mucho menor, para conseguir determinadas propiedades que se van buscando. 
+    * conseguir diferentes grados de dureza
+    * facilidad de impresión 
+    * rigidez o elasticidad
+* Se añade un colorante y/o otros aditivos para conseguir el acabado que vamos buscando:
+    *  acabado en madera 
+    * acabado metalizado
+    *  pequeñas partículas de otro material que se verán en el resultado final
+* Está mezcla se funde y se comienza a obtener el filamento a alta temperatura a través de una boquilla del diámetro deseado. 
+
+* El filamento resultante se va moviendo y enfriando al mismo tiempo para conseguir bajarlo a una temperatura suficientemente alta para que se pueda bobinar pero suficientemente baja para evitar que pierda las características que estamos buscando y se mantenga a un grosor lo más exacto posible.
+
+* Para ello se hace pasar por determinados baño a diferente temperatura y entre diferentes rodillo que garantizan su grosor
+
+* El último paso es el bobinado en los rollos que nos llegarán a  los usuarios. Este proceso de bobinado es muy importante para conseguir que no se produzcan nudos y que pueda recuperar el filamento y aprovechar hasta el último pedazo fragmento de la bobina
+
+
+Por el propio funcionamiento de la empresa a veces ocurre que encontramos que entre el cambio de una mezcla a otra con diferentes pigmentos o diferentes propiedades el fabricante decide utilizar ese resto que le queda te material para generar una bobina en las que el filamento no tiene un color homogéneo o no tiene ningún color concreto.  estás bobina suelen vender a un precio inferior la calidad del filamento en la misma pero al no tener un color homogéneo no la hacen apta para todo tipo de impresiones
+
+## Precios
+
+Existen multitud de empresas que venden filamento unas con mayor o con menor calidad,  a veces la encontramos a unos precios y a veces a otro. En cualquier caso tenemos de pensar  que una empresa difícilmente va a perder dinero vendiendo un filamento a un precio muy bajo. Cuando encontramos una oferta de filamento a un precio extremadamente bajo con gran probabilidad estamos ante una empresa  qué quiere eliminar un determinado lote de filamento las razones se nos escapan:
+*  puede ser que simplemente quiera eliminar un stock que en ese momento no le interesa almacenar
+*  en otras ocasiones puede ser simplemente una oferta puntual que pretende ganar mercado o popularidad
+*  también puede ocurrir que estemos ante un filamento de baja calidad que la del que se quieren deshacer 
+
+
+Características  del filamento
+
+* El grosor,  que puede ser 2.85/3mm o de 1.75mm
+* El material, por supuesto, lo que nos va dar una temperatura de fusión y de adherencia a la base
+
+
+
+
+## Calidad del filamento
+
+Son muchos los parámetros a tener en cuenta para juzgar la calidad de un buen filamento:
+
+* La calidad del plástico utilizado: como hemos ya comentado, Se pueden utilizar muchos tipos diferentes de polímeros y distintas mezclas entre ellos para conseguir un filamento con determinadas características. 
+* El proceso de creación del filamento.
+* La precisión en el grosor es decir cómo se desvía de ese tamaño teórico.
+* La antigüedad y conservación del filamento. Con el paso del tiempo el filamento va perdiendo propiedades haciéndose más quebradizo y en muchas ocasiones absorbiendo humedad
+* La calidad del bobinado,  es decir que este no presenten  nudos y que facilite completamente  el resultado de la impresión
+
+
+## Saber el estado del filamento
+
+Una prueba rápida sobre el filamento es intentar doblarlo. Todos los filamentos, aunque no sean flexibles, tienen un cierto grado de flexibilidad que permite que los doblemos: 
+
+* Si el filamento se encuentra en mal estado se romperá fácilmente
+* Cuando el filamento  ha absorbido bastante humedad,  al imprimir se oyen pequeños estallidos como de burbujas 
+
+## Problemas provocados por el filamento
+
+
+
+
+### Tipos de filamentos
 
 [![Vídeo: 4.0 Tipos y características de filamentos para impresión 3D](https://img.youtube.com/vi/74VFdfpiIuI/0.jpg)](https://youtu.be/74VFdfpiIuI)
 
@@ -20,6 +90,8 @@ Cada vez existen más materiales susceptibles de poder usarse en las impresoras.
 * Nylon: muy duro y semi flexible
 * Ninjaflex y Filaflex: muy flexibles
 * ...
+
+**DETALLAR MAS LAS CARACTERÍSTICAS**
 
 ## Flexibles
 
