--- a/4.0.1.ComponentesImpresora3D.md
+++ b/4.0.1.ComponentesImpresora3D.md
@@ -3,75 +3,34 @@
 
 
 
-### Sensores
-
-También suelen incluir distintos sensores para facilitar tanto los movimientos de la impresora como lo que sería la medida de la temperatura en diferentes puntos interesantes por ejemplo incluye un sensor de temperatura en la base para saber cuál es la temperatura de esta un sensor de temperatura en el extrusor y diversos sensores para garantizar el correcto posicionamiento del extrusor que es la parte más importante
-
-En las impresoras de gama más baja se suelen utilizar uno pequeño microinterruptores que actúan como **finales de carrera** es decir que detectan una al menos una de las posiciones de los extremos de los ejes.  De esta forma podemos  conocer con gran precisión al menos uno de loa extremos, si ahora movemos con precisión nuestro extrusor y moviendo hablar con los distintos ejes conseguiremos una mayor precisión
-
-
-Alguna impresora también incluyen **sensores de filamento** que permiten detectar si existe o no filamento, así como el grosor del mismo para conseguir una mayor calidad en la impresión
 
 ### Ventiladores
 
 ruido...
 
+**Ventilador de extrusor** suele estar al 100% todo el tiempo
 
-### Impresoras más complejas
+**Ventilador de capa**
+![](./images/VentiladoresCapa.jpg)
 
-A medida que se hace más compleja entrenamiento de la impresora incluyendo más motores también se incluyen más sensores para garantizar el correcto funcionamiento por ejemplo si utilizamos un sistema de múltiples herramientas decir la impresora tiene distinto extrusores que puedo utilizar pues necesitaremos de los sensores correspondientes para saber en qué cuál de ellos tenemos colocado y que está correctamente conectado al sistema
-
-También alguna de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir
-
-El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material
-
-### Tipos de extrusores
-
-Existen diferentes implementaciones del mecanismo de los extrusores
-
-Hablamos de extrusión directa cuando el motor tiene un engranaje que arrastra directamente el filamento de esta forma garantizamos un control muy preciso a cambio necesitamos que el motor tenga una mayor potencia para sierra estar directamente
+[Modelo](https://www.thingiverse.com/thing:1722918)
 
 
-Otros extrusores utilizan un sistema de engranaje que multiplican la fuerza del motor a cambio de conseguir una mayor complejidad pero consiguiendo una buena calidad y funcionamiento con motores muy de mulhouse potencia
 
+## Extrusor + fusor (HotEnd)
 
-## Impresoras que no utilizan filamento
+Una de las partes fundamentales de toda impresora es el conjunto extrusor + fusor (HotEnd).  En muchas ocasiones, por abuso del lenguaje, se llama extrusor al conjunto de los dos componentes,  pero hablando con propiedad debemos distinguirlos puesto que tienen roles muy distintos:
+*  el extrusor es la parte mecánica  que mueve el filamento y que alimenta al otro componente
+*  el fusor donde el plástico se funde y desde el que se deposita en la base
 
-Existen alguna extrusores que no usan filamento y que pueden trabajar directamente con el plástico en un formato que se suele conocer como *pelets*, que son pequeñas bolitas de plástico con el que se pueden trabajar perfectamente. 
-
-Estos extrusores son algo más complejos ya que suelen incluir una especie de depósito o tolva que van extrayendo la cantidad adecuada de este plástico al mismo tiempo que lo van rompiendo, comprimiendo y fundiendo.
-
-![](./images/extrusorPelets.jpg)
-
-![](./images/universal_pellet_extruder_3d_druck_3d_printing1.jpg)
-
-
-Para ello utilizan una broca especial conectada al motor del extrusor que va moviento el plástico a la velocidad adecuada
-
-![](./images/broca.jpg)
-
-
-## Estructura del extrusor
-
-La parte más sencilla es la boquilla, en la parte final y no garantiza que el la extrusión del firmamento va a tener un tamaño controlado normalmente están hechas de latón y sufre un gran desgaste en contra de Nenuco podría pensar el plástico fundido la paga estando en necesario cambiar la consideran un elemento fungible
-
-La parte central del fusor dónde se funde realmente el filamento está formada por una cilindro largo que al mismo tiempo tiene que tener por un extremo una temperatura alta que dónde se produce propiamente la fundición del plástico y por el otro extremo debe tener la temperatura lo más baja posible de ahí que en esta parte se suele incluir unos elementos disipadores para que la temperatura sea baja en la zona adecuada.
-
-La cabeza calefactora suele ser un componente un bloque en el que tenemos por un lado un elemento calefactor suele ser una resistencia cerámica que es la responsable de alcanzar la temperatura alta necesaria para fundir el filamento y un sensor que suele ser una resistencia en etc o etc que mide la temperatura con precisión con el fin de ajustar el ciclo de control
-
-Dentro de este cilindro o barrel se suele incluir un tubo de un material conocido como PTFE que tiene una un gran coeficiente de deslizamiento y que permite que el filamento fluya este elemento conocido también como teflón nos permite que el filamento se mueva con facilidad y al mismo tiempo no se adhiera en el caso de que esté fundido
-
-También se considera un elemento fungible y que tenemos que reparar que cambiar cada cierto número de hora de i.presionmisión
-
-Los extrusores suelen incluir en la parte de fuera del disipador un ventilador que contribuye a que la temperatura del esta parte del extrusor sea lo más baja posible
-
+Este componente es tan importante que le vamos a dedicar una parte en exclusiva.
 
 ## Estructura de la base
 
 La base suele incluir una superficie lisa dónde imprimiremos y un componente calefactor que sin carga de que se alcance la temperatura adecuada en la base
 
 
-También suelen incluir un sistema de tornillo y de muelles para ajustar y calibrar la horizontalidad dile a base es fundamental que el estusor se mueva de una forma cuanto más paralela mejor a toda la estructura de la base de ahí la necesidad de nivelar de calibrar
+También suelen incluir un sistema de tornillo y de muelles para ajustar y calibrar la horizontalidad dile a base es fundamental que el extrusor se mueva de una forma cuanto más paralela mejor a toda la estructura de la base de ahí la necesidad de nivelar de calibrar
 
 
 ## Electrónica de una impresora 3D
@@ -111,3 +70,27 @@ La fuente de alimentación es un elemento fundamental de la impresora puesto que
 
 
 La fuente de alimentación es un elemento fundamental de la impresora puesto que tiene que ser capaz de proporcionar una alimentación lo más estabilizada posible a todo el sistema
+
+### Motores
+
+En el 99.99 % de las impresoras son motores paso a paso y casi siempre de los denominados nema1
+
+### Sensores
+
+También suelen incluir distintos sensores para facilitar tanto los movimientos de la impresora como lo que sería la medida de la temperatura en diferentes puntos interesantes por ejemplo incluye un sensor de temperatura en la base para saber cuál es la temperatura de esta un sensor de temperatura en el extrusor y diversos sensores para garantizar el correcto posicionamiento del extrusor que es la parte más importante
+
+En las impresoras de gama más baja se suelen utilizar uno pequeño microinterruptores que actúan como **finales de carrera** es decir que detectan una al menos una de las posiciones de los extremos de los ejes.  De esta forma podemos  conocer con gran precisión al menos uno de loa extremos, si ahora movemos con precisión nuestro extrusor y moviendo hablar con los distintos ejes conseguiremos una mayor precisión
+
+
+Alguna impresora también incluyen **sensores de filamento** que permiten detectar si existe o no filamento, así como el grosor del mismo para conseguir una mayor calidad en la impresión
+
+
+### Impresoras más complejas
+
+A medida que se hace más compleja entrenamiento de la impresora incluyendo más motores también se incluyen más sensores para garantizar el correcto funcionamiento por ejemplo si utilizamos un sistema de múltiples herramientas decir la impresora tiene distinto extrusores que puedo utilizar pues necesitaremos de los sensores correspondientes para saber en qué cuál de ellos tenemos colocado y que está correctamente conectado al sistema
+
+También alguna de las impresoras incluyen sistemas para cambio de filamento es decir son capaces de utilizar distintos filamentos de forma alternativa para ello es necesario conocer con precisión todos estos componentes y cuando el filamento está listo para imprimir
+
+El funcionamiento de una extrusor es muy sencillo conceptualmente: se trata simplemente de un motor que es capaz de mover el filamento de una forma precisa al mismo tiempo que lo funde para conseguir que se aporte una cantidad exacta de material
+
+
