--- a/0.5.GuiaRapida.md
+++ b/0.5.GuiaRapida.md
@@ -10,10 +10,16 @@
 )
 * Descargamos el programa laminador [Ultimaker Cura](https://ultimaker.com/es/software)
 
-* Configuramos los parámetros de la impresión: calidad, soporte y convertimos nuestro modelo en instrucciones para la impresora (fichero **gcode**) que copiamos a la tarjeta SD de la impresora
+* Configuramos los parámetros de la impresión: 
+    * calidad 
+    * soporte 
+* Laminamos: convertimos nuestro modelo en instrucciones para la impresora (fichero **gcode**) 
+* copiamos a la tarjeta SD de la impresora
 
 ![AmongUsCura](./images/AmongUsCura.png)
 
-* Preparamos nuestra impresora: cargamos filamento, comprobamos la nivelación
+* Preparamos nuestra impresora: 
+    * cargamos filamento, 
+    * comprobamos la nivelación
 * Seleccionamos en la impresora el fichero a imprimir y pulsamos **Print**
 
